@@ -1,4 +1,5 @@
 Development
+	More safety checks in Write method
 	Don't allow NULL filename
 	When opening the media and no window has been set, tell gnome-mplayer to run hidden
 	Fix problem with looping
